fix login and register page

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=HeloDoc
 APP_ENV=local
 APP_KEY=base64:dAA9L7bS7mO8RtA2duHX+qg/aGJL2uNOsQrU9m+Bk4Q=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=www.hellodoc.com/new/
 
 LOG_CHANNEL=stack
 
