--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "google/cloud-firestore": "^1.12",
+        "kreait/laravel-firebase": "^2.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "zizaco/entrust": "5.2.x-dev"
