test from morshed

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=helodoc
 DB_USERNAME=root
-DB_PASSWORD=root123
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
@@ -26,8 +26,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=12314efea46acc
-MAIL_PASSWORD=0e0dca1163bd26
+MAIL_USERNAME=cfa8d1ec2b480e
+MAIL_PASSWORD=78b5e12786e973
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
